--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <span style="width:300px;">UserName:</span> <input type="text" value="" id="userid"><span id="admin" style="width:300px;"></span>   <br><br>
     Password: <input type="password" value="" id="userpw"><br><br>
     <input type="checkbox" name="pw_reverse" onclick="pwFunction()">Show Password
-<div style="margin-top: 5px;"><button id='login' >嘗試登入</button></div>	
+<div style="margin-top: 5px;"><button id='login' >登入</button></div>	
 </div>
 </div>
 
@@ -153,8 +153,8 @@
   <label for="r25m" style="vertical-align:sub">25/F Meeting Room</label><br>
   <input type="radio" id="r25c" name="room" style="vertical-align:middle" value="r25c">
   <label for="r25c" style="vertical-align:sub">25/F Conference / Training Room</label><br>
-  <input type="radio" id="no_booking" name="room" style="vertical-align:middle" value="nobook">
-  <label for="nobook" style="vertical-align:sub">無訂房</label><br>
+  <!--input type="radio" id="no_booking" name="room" style="vertical-align:middle" value="nobook">
+  <label for="nobook" style="vertical-align:sub">無訂房</label><br-->
 
 
  </form>
@@ -183,7 +183,7 @@
 </div>
 
 </div>
-<div style='font-size: x-small;'>version: 20210425-1308</div>
+<div style='font-size: x-small;'>version: 20210427-1454</div>
 
 
 
