--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
 <div style="margin-top: 5px;"><button id='login' >登入</button></div>	
 </div>
 
+</div>
 
 
+<div class="inner_div">
 <div style="font-size: 8px;">測試字體, font-size: 8px;</div>
 <div style="font-size: 9px;">測試字體, font-size: 9px;</div>
 <div style="font-size: 10px;">測試字體, font-size: 10px;</div>
@@ -36,11 +38,7 @@
 <div style="font-size: 13px;">測試字體, font-size: 13px;</div>
 <div style="font-size: 14px;">測試字體, font-size: 14px;</div>
 <div style="font-size: 15px;">測試字體, font-size: 15px;</div>
-
-
 </div>
-
-
 
 
 
@@ -207,7 +205,7 @@
 </div>
 
 </div>
-<div style='font-size: x-small;'>version: 20210429-1115</div>
+<div style='font-size: x-small;'>version: 20210429-1200</div>
 
 
 
