--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <div id="user_div" style='background-color:#248ae5;' class='title_div'>
   <b>使用者資料</b>
 </div>
-<div id="user_info_div" style='background-color:#9ac2e6; margin-bottom:4px;' class='content_div'>
-<div class="inner_div">
+<div id="user_info_div" style='background-color:#9ac2e6; margin-bottom:4px;' class='content_div2'>
+<div class="inner_div2">
     <span style="width:300px;">UserName:</span> <input type="text" value="" id="userid"><span id="admin" style="width:300px;"></span>   <br><br>
     Password: <input type="password" value="" id="userpw"><br><br>
     <input type="checkbox" name="pw_reverse" onclick="pwFunction()">Show Password
@@ -29,7 +29,7 @@
 </div>
 
 
-<div class="inner_div">
+<!--div class="inner_div2">
 <div style="font-size: 8px;">測試字體, font-size: 8px;</div>
 <div style="font-size: 9px;">測試字體, font-size: 9px;</div>
 <div style="font-size: 10px;">測試字體, font-size: 10px;</div>
@@ -38,7 +38,7 @@
 <div style="font-size: 13px;">測試字體, font-size: 13px;</div>
 <div style="font-size: 14px;">測試字體, font-size: 14px;</div>
 <div style="font-size: 15px;">測試字體, font-size: 15px;</div>
-</div>
+</div-->
 
 
 
@@ -72,7 +72,7 @@
 </div>
 
 
-<div id="room_div" style='background-color:#fdda96;margin-bottom: 7px;' class='content_div'>
+<div id="room_div" style='background-color:#fdda96;margin-bottom: 7px;' class='content_div2'>
   <div>
   <div>
 	  <div style="background-color:#fdbe52; padding:8px 8px 8px 8px;">
@@ -96,7 +96,7 @@
 		  <div id="r25c_div"></div>  
 	  </div>	  
   </div>    
-  <div id="cancel_div" class="inner_div">
+  <div id="cancel_div" class="inner_div2">
     <button id='bookcancel'>取消訂房</button>
   </div>
   </div>
@@ -122,7 +122,7 @@
 <div id="room_title_div" style='background-color:#248ae5; ' class='title_div'>
   <b>預約資料輸入</b>
 </div>
-<div id="apply_room_div" style='background-color:#9ac2e6; ' class='content_div'>
+<div id="apply_room_div" style='background-color:#9ac2e6; ' class='content_div2'>
 
 
 <table width="100%" >
@@ -161,7 +161,7 @@
 
 
 
-<div class="inner_div">
+<div class="inner_div2">
 <div id="showrange2">使用時段: 9:00am - 6:00pm</div>
 
 <div style="padding-top:30px;">
@@ -205,7 +205,7 @@
 </div>
 
 </div>
-<div style='font-size: x-small;'>version: 20210429-1200</div>
+<div style='font-size: x-small;'>version: 20210429-1212</div>
 
 
 
